[gd_scene load_steps=21 format=3 uid="uid://cs0bcmdwjjmdb"]

[ext_resource type="Script" path="res://Scenes/Loadout/loadout.gd" id="1_svrqx"]
[ext_resource type="PackedScene" uid="uid://dnephrsd5mmc6" path="res://Scenes/Loadout/weapon_equip.tscn" id="2_8nhnf"]
[ext_resource type="Texture2D" uid="uid://d3b0a318730dg" path="res://Scenes/Loadout/LoadoutOnlySprites/EmptySlotSprite.png" id="3_ut23p"]
[ext_resource type="Texture2D" uid="uid://b02d6ywrnvb63" path="res://Assets/PlayerSpriteSheets/NoSuit/PlayerNoSuitForwardWalk.png" id="3_v36r4"]
[ext_resource type="PackedScene" uid="uid://bccr4q46k41d3" path="res://Scenes/Loadout/modifier_equip.tscn" id="5_fmppv"]
[ext_resource type="PackedScene" uid="uid://bml0u73hmsfx2" path="res://Scenes/Loadout/modifier2_equip.tscn" id="6_qmv3n"]
[ext_resource type="Texture2D" uid="uid://camujexa7mw5p" path="res://Assets/MenuAssets/MenuIcons.png" id="7_3qx1d"]
[ext_resource type="Texture2D" uid="uid://bx5nj7i348k3p" path="res://Assets/Tiles/Pickuptileset.png" id="8_s5plg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_c8roa"]
atlas = ExtResource("7_3qx1d")
region = Rect2(144, 16, 80, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6kgc"]
atlas = ExtResource("7_3qx1d")
region = Rect2(146, 83, 34, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_ay0sg"]
atlas = ExtResource("3_v36r4")
region = Rect2(70, 8, 20, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_sv7hn"]
atlas = ExtResource("7_3qx1d")
region = Rect2(16, 80, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1npu3"]
atlas = ExtResource("7_3qx1d")
region = Rect2(16, 96, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ne7aa"]
atlas = ExtResource("7_3qx1d")
region = Rect2(16, 48, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5s3qg"]
atlas = ExtResource("7_3qx1d")
region = Rect2(16, 64, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1m32"]
atlas = ExtResource("7_3qx1d")
region = Rect2(80, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfdgf"]
atlas = ExtResource("8_s5plg")
region = Rect2(32, 0, 32, 32)

[sub_resource type="Animation" id="Animation_8alkd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0174533]
}

[sub_resource type="Animation" id="Animation_4i3jp"]
resource_name = "rotate"
length = 1.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0174533, 0.0349066, 0.0523599, 0.0349066, 0.0174533, 0.0, -0.0174533, -0.0349066, -0.0523599, -0.0698132, -0.0523599, -0.0349066, -0.0174533]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sf2bl"]
_data = {
"RESET": SubResource("Animation_8alkd"),
"rotate-loop": SubResource("Animation_4i3jp")
}

[node name="Loadout" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_svrqx")

[node name="MainBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.0117647, 0.109804, 0.188235, 1)

[node name="DriversLicense" type="TextureRect" parent="MainBackground"]
texture_filter = 1
custom_minimum_size = Vector2(256, 128)
layout_mode = 0
offset_left = 3.0
offset_top = 1.0
offset_right = 275.0
offset_bottom = 129.0
scale = Vector2(5, 5)
texture = SubResource("AtlasTexture_c8roa")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="MainBackground/DriversLicense"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.4003
offset_top = 24.6
offset_right = 123.6
offset_bottom = 72.5999
grow_horizontal = 2
texture = SubResource("AtlasTexture_v6kgc")

[node name="Lbl" type="Label" parent="MainBackground/DriversLicense"]
texture_filter = 3
layout_mode = 1
offset_left = 120.0
offset_top = 10.0
offset_right = 222.0
offset_bottom = 27.0
scale = Vector2(0.25, 0.25)
theme_override_colors/font_color = Color(0, 0.403922, 0.643137, 1)
theme_override_colors/font_outline_color = Color(0, 0.235294, 0.317647, 1)
theme_override_constants/outline_size = 32
theme_override_font_sizes/font_size = 64
text = "DRIVER'S LICENSE
"

[node name="GC" type="GridContainer" parent="MainBackground/DriversLicense"]
layout_mode = 0
offset_top = 3.0
offset_right = 258.0
offset_bottom = 125.0
theme_override_constants/h_separation = 0
columns = 2

[node name="Portrait" type="GridContainer" parent="MainBackground/DriversLicense/GC"]
custom_minimum_size = Vector2(112, 126)
layout_mode = 2

[node name="PlayerIcon" type="TextureRect" parent="MainBackground/DriversLicense/GC/Portrait"]
texture_filter = 1
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
texture = SubResource("AtlasTexture_ay0sg")
expand_mode = 3
stretch_mode = 5

[node name="InvSlots" type="GridContainer" parent="MainBackground/DriversLicense/GC"]
custom_minimum_size = Vector2(50, 58)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
columns = 3

[node name="Modifier1" type="TextureButton" parent="MainBackground/DriversLicense/GC/InvSlots"]
unique_name_in_owner = true
show_behind_parent = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource("3_ut23p")
ignore_texture_size = true
stretch_mode = 5

[node name="MC" type="MarginContainer" parent="MainBackground/DriversLicense/GC/InvSlots/Modifier1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EquipedMod1" type="TextureRect" parent="MainBackground/DriversLicense/GC/InvSlots/Modifier1/MC"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="Modifier2" type="TextureButton" parent="MainBackground/DriversLicense/GC/InvSlots"]
unique_name_in_owner = true
show_behind_parent = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource("3_ut23p")
ignore_texture_size = true
stretch_mode = 5

[node name="MC" type="MarginContainer" parent="MainBackground/DriversLicense/GC/InvSlots/Modifier2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EquipedMod2" type="TextureRect" parent="MainBackground/DriversLicense/GC/InvSlots/Modifier2/MC"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="WeaponSlot1" type="TextureButton" parent="MainBackground/DriversLicense/GC/InvSlots"]
unique_name_in_owner = true
show_behind_parent = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_ut23p")
ignore_texture_size = true
stretch_mode = 5

[node name="MC" type="MarginContainer" parent="MainBackground/DriversLicense/GC/InvSlots/WeaponSlot1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EquipedWeapon" type="TextureRect" parent="MainBackground/DriversLicense/GC/InvSlots/WeaponSlot1/MC"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="WeaponEquip" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
offset_left = 1284.0
offset_top = 5.0
offset_right = 1916.0
offset_bottom = 845.0

[node name="WeaponEquip" parent="WeaponEquip" instance=ExtResource("2_8nhnf")]
layout_mode = 1
anchors_preset = 13
anchor_top = 0.0
anchor_bottom = 1.0
offset_left = -316.0
offset_top = 0.0
offset_right = 316.0
offset_bottom = -1.0

[node name="ModEquip1" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
offset_left = 1286.0
offset_right = 1918.0
offset_bottom = 840.0

[node name="ModifierEquip" parent="ModEquip1" instance=ExtResource("5_fmppv")]
layout_mode = 1
offset_left = -316.0
offset_top = -420.0
offset_right = 316.0
offset_bottom = 420.0

[node name="ModEquip2" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 1285.0
offset_right = 1917.0
offset_bottom = 840.0

[node name="Modifier2Equip" parent="ModEquip2" instance=ExtResource("6_qmv3n")]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="ExitBtn" type="TextureButton" parent="."]
texture_filter = 1
custom_minimum_size = Vector2(128, 128)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -150.0
offset_right = 272.0
offset_bottom = -22.0
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = SubResource("AtlasTexture_sv7hn")
texture_pressed = SubResource("AtlasTexture_1npu3")
texture_hover = SubResource("AtlasTexture_1npu3")
ignore_texture_size = true
stretch_mode = 0

[node name="PlayBtn" type="TextureButton" parent="."]
texture_filter = 1
custom_minimum_size = Vector2(256, 128)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -272.0
offset_top = -150.0
offset_right = -16.0
offset_bottom = -22.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = SubResource("AtlasTexture_ne7aa")
texture_pressed = SubResource("AtlasTexture_5s3qg")
texture_hover = SubResource("AtlasTexture_5s3qg")
stretch_mode = 0

[node name="ResearchBtn" type="TextureButton" parent="."]
texture_filter = 1
custom_minimum_size = Vector2(128, 128)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -150.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = SubResource("AtlasTexture_e1m32")
ignore_texture_size = true
stretch_mode = 0

[node name="RSIcon" type="TextureRect" parent="ResearchBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.0174533
mouse_filter = 2
texture = SubResource("AtlasTexture_vfdgf")

[node name="RsAnimate" type="AnimationPlayer" parent="ResearchBtn/RSIcon"]
unique_name_in_owner = true
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_sf2bl")
}
speed_scale = 2.0

[connection signal="pressed" from="MainBackground/DriversLicense/GC/InvSlots/Modifier1" to="." method="_on_modifier_1_pressed"]
[connection signal="pressed" from="MainBackground/DriversLicense/GC/InvSlots/Modifier2" to="." method="_on_modifier_2_pressed"]
[connection signal="pressed" from="MainBackground/DriversLicense/GC/InvSlots/WeaponSlot1" to="." method="_on_weapon_equiped_pressed"]
[connection signal="pressed" from="ExitBtn" to="." method="_on_exit_btn_pressed"]
[connection signal="pressed" from="PlayBtn" to="." method="_on_play_btn_pressed"]
[connection signal="mouse_entered" from="ResearchBtn" to="." method="_on_research_btn_mouse_entered"]
[connection signal="mouse_exited" from="ResearchBtn" to="." method="_on_research_btn_mouse_exited"]
[connection signal="pressed" from="ResearchBtn" to="." method="_on_research_btn_pressed"]
